<?xml version="1.0"?>
<package>
  <name>rviz_rosbag_tools</name>
  <version>0.0.1</version>
  <description>RViz plugin to control rosbags.</description>

  <maintainer email="bianca.forkel@unibw.de">bifo</maintainer>

  <license>BSD</license>
  <author email="bianca.forkel@unibw.de">bifo</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_srvs</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>qtbase5-dev</build_depend>

  <run_depend>std_srvs</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>

  <export>
      <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
